--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     <ul id="files-list"></ul>
   </fieldset>
 
+  <fieldset id="progress-list" hidden>
+    <legend>Progress</legend>
+    <ul id="progress"></ul>
+  </fieldset>
+
+  <div id="connections"></div>
+
   <script src="/client.js"></script>
 </body>
 </html>
